lots of progress on introduction

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,28 +1,176 @@
-@article{exampleKey9999,
-  author = 	 {{This is an example of a BibTex entry}},
-  title = 	 {You can get the BibTex entry of any article using its doi from for example https://www.bibtex.com/c/doi-to-bibtex-converter/},
-  journal = 	 {You can remove this entry once you start putting your own entries here},
-  year = 	 9999,
-  volume = 	 1,
-  number = 	 1,
-  pages = 	 {1-2},
-  month = 	 {Aug}}
-  
-  @misc{WHOepi,
+@online{whoepi,
     author        =   "WHO",
     title         =   "Injuries and violence",
-    howpublished  =   "\url{https://www.who.int/news-room/fact-sheets/detail/injuries-and-violence#:~:text=Of%20the%204.4%20million%20injury,1.25%20million%20people%20every%20year.}",
     year          =   2021,
-    month         =   mar,
-    note          =   "Accessed: 2022-08-30"
+    url           =   {https://www.who.int/news-room/fact-sheets/detail/injuries-and-violence},
+    urldate       =   {2022-08-30},
   }
   
 
-@misc{NKStrauma,
-    author        = "Hanna Melbin",
-    title         = "Karolinska University Hospital becomes Sweden’s first trauma centre",
-    howpublished  = "\url{https://www.karolinska.se/en/karolinska-university-hospital/news/2020/12/karolinska-university-hospital-becomes-swedens-first-trauma-centre}",
-    year          = "2020",
-    month         = "dec",
-    note          = "Accessed: 2022-09-08",
+@online{NKStrauma,
+    author        = {{Karolinska University Hospital}},
+    title         = {Karolinska University Hospital becomes Sweden’s first trauma centre},
+    year          = {2020},
+    url           = {https://www.karolinska.se/en/karolinska-university-hospital/news/2020/12/karolinska-university-hospital-becomes-swedens-first-trauma-centre},
+    urldate       = {2022-09-09},
   }
+  
+@online{SCB,
+  author          = {Statistics Sweden},
+  title           = {Dödsorsaker efter ålder år 2019},
+  year            = 2020,
+  url             = {https://www.scb.se/hitta-statistik/temaomraden/jamstalldhet/jamstalld-halsa/livslangd-och-dodsorsaker/dodsorsaker-efter-alder/},
+  urldate         = {2022-09-09},
+  }
+
+@article{globalburden,
+  title           = {Global Burden of 369 Diseases and Injuries in 204 Countries and Territories, 1990\textendash 2019: A Systematic Analysis for the {{Global Burden}} of {{Disease Study}} 2019},
+  shorttitle      = {Global Burden of 369 Diseases and Injuries in 204 Countries and Territories, 1990\textendash 2019},
+  year            = {2020},
+  month           = oct,
+  journal         = {Lancet (London, England)},
+  volume          = {396},
+  number          = {10258},
+  pages           = {1204--1222},
+  issn            = {0140-6736},
+  doi             = {10.1016/S0140-6736(20)30925-9},
+  pmcid           = {PMC7567026},
+  pmid            = {33069326},
+  }
+
+@article{longterm,
+  title           = {Long-Term Follow-up of Patients Treated for Traumatic Injury Regarding Physical and Psychological Function and Health-Related Quality of Life},
+  author          = {Wihlke, Gunilla and Str{\"o}mmer, Lovisa and Tro{\"e}ng, Thomas and Brattstr{\"o}m, Olof},
+  year            = {2021},
+  month           = feb,
+  journal         = {European Journal of Trauma and Emergency Surgery},
+  volume          = {47},
+  number          = {1},
+  pages           = {129--135},
+  issn            = {1863-9941},
+  doi             = {10.1007/s00068-019-01170-w},
+  langid          = {english},
+  keywords        = {EQ-5D,Outcome,PTSS-10,Quality of life,Trauma}
+  }
+
+@article{traumareview,
+  title           = {Trauma {{Scoring Systems}}: {{A Review}}},
+  author          = {Senkowski, Christopher K and McKenney, Mark G},
+  year            = {1999},
+  journal         = {J Am Coll Surg},
+  volume          = {189},
+  number          = {5},
+  pages           = {13},
+  langid          = {english},
+  }
+
+@book{whoguidelines,
+  title           = {Guidelines for Trauma Quality Improvement Programmes},
+  author          = {{World Health Organization}},
+  year            = {2009},
+  institution     = {{World Health Organization}},
+  isbn            = {9789241597746},
+  langid          = {english},
+  }
+
+
+@article{mmreview,
+  title         = {Morbidity and Mortality Conferences in General Surgery: A Narrative Systematic Review},
+  shorttitle    = {Morbidity and Mortality Conferences in General Surgery},
+  author        = {Slater, Nicholas and Sekhon, Perneet and Bradley, Nori and Shariff, Farhana and Bedford, Julie and Wong, Heather and Chiu, Chieh Jack and Joos, Emilie and Ball, Chad G. and Hameed, Morad},
+  year          = {2020},
+  month         = jun,
+  journal       = {Canadian Journal of Surgery},
+  volume        = {63},
+  number        = {3},
+  pages         = {E211-E222},
+  issn          = {0008-428X},
+  doi           = {10.1503/cjs.009219},
+  pmcid         = {PMC7828998},
+  pmid          = {32386469},
+  }
+  
+@article{southafrica,
+  title         = {Analysis of 5 Years of Morbidity and Mortality Conferences in a Metropolitan {{South African}} Trauma Service},
+  author        = {Kong, Victor Y. and Clarke, Damian Luiz},
+  year          = {2016},
+  month         = jun,
+  journal       = {South African Medical Journal = Suid-Afrikaanse Tydskrif Vir Geneeskunde},
+  volume        = {106},
+  number        = {7},
+  pages         = {695--698},
+  issn          = {0256-9574},
+  doi           = {10.7196/SAMJ.2016.v106i7.10549},
+  langid        = {english},
+  pmid          = {27384364},
+  }
+
+@article{errors,
+  author        = {Ghorbani, P. and Strömmer, L.},
+  title         = {Analysis of preventable deaths and errors in trauma care in a Scandinavian trauma level-I centre},
+  journal       = {Acta Anaesthesiologica Scandinavica},
+  volume        = {62},
+  number        = {8},
+  pages         = {1146-1153},
+  keywords      = {NORMIT, peer review, preventable death, risk-prediction models, TRISS},
+  doi           = {https://doi.org/10.1111/aas.13151},
+  url           = {https://onlinelibrary.wiley.com/doi/abs/10.1111/aas.13151},
+  eprint        = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/aas.13151},
+  year          = {2018}
+  }
+
+@article{ustqi,
+  title         = {Association of {{Hospital Participation}} in a {{Regional Trauma Quality Improvement Collaborative With Patient Outcomes}}},
+  author        = {Hemmila, Mark R. and {Cain-Nielsen}, Anne H. and Jakubus, Jill L. and Mikhail, Judy N. and Dimick, Justin B.},
+  year          = {2018},
+  month         = aug,
+  journal       = {JAMA surgery},
+  volume        = {153},
+  number        = {8},
+  pages         = {747--756},
+  issn          = {2168-6262},
+  doi           = {10.1001/jamasurg.2018.0985},
+  langid        = {english},
+  pmcid         = {PMC6142961},
+  pmid          = {29800946},
+  keywords      = {Adolescent,Adult,Aged,Benchmarking,Female,Hospital Mortality,Hospitals,Humans,Incidence,Male,Middle Aged,Outcome Assessment; Health Care,Postoperative Complications,Quality Improvement,Retrospective Studies,Surgical Procedures; Operative,Survival Rate,United States,Wounds and Injuries,Young Adult},
+  }
+
+@article{trissbetter,
+  title         = {{{TRISS}}: {{Does It Get Better}} than {{This}}?},
+  author        = {Gabbe, Belinda J. and Cameron, Peter A. and Wolfe, Rory},
+  year          = {2004},
+  journal       = {Academic Emergency Medicine},
+  volume        = {11},
+  number        = {2},
+  pages         = {181--186},
+  issn          = {1553-2712},
+  doi           = {10.1111/j.1553-2712.2004.tb01432.x},
+  langid        = {english},
+  keywords      = {review,trauma,Trauma and Injury Severity Score},
+  }
+
+@article{triss,
+  title         = {Evaluating Trauma Care: The {{TRISS}} Method. {{Trauma Score}} and the {{Injury Severity Score}}},
+  shorttitle    = {Evaluating Trauma Care},
+  author        = {Boyd, C. R. and Tolson, M. A. and Copes, W. S.},
+  year          = {1987},
+  month         = apr,
+  journal       = {The Journal of Trauma},
+  volume        = {27},
+  number        = {4},
+  pages         = {370--378},
+  issn          = {0022-5282},
+  langid        = {english},
+  pmid          = {3106646},
+  keywords      = {Age Factors,Diagnosis-Related Groups,Emergency Medical Services,Humans,Middle Aged,Outcome and Process Assessment; Health Care,Probability,Quality Assurance; Health Care,Severity of Illness Index,Statistics as Topic,Triage,Wounds and Injuries}
+}
+
+
+@online{blank,
+  author          = {},
+  title           = {},
+  year            = {},
+  url             = {},
+  urldate         = {},
+}
