--- a/studyprogressreport.Rmd
+++ b/studyprogressreport.Rmd
@@ -42,11 +42,7 @@ Another cornerstone of trauma quality improvement programs worldwide are multidi
 
 One limitation of M&M conferences is that their value in long-term quality improvement is dependent on selection of appropriate cases for review. The process by which patient cases are selected for M&M review differs between clinics and one systematic review found that case selection is often non-standardised [@mmreview]. There is an inherent weakness in relying on healthcare providers to self-report on cases they were involved in. One study in South Africa found that using electronic medical records to automatically generate reports led to a dramatic increase in reporting of morbidity and mortality over a system of self-reporting for MMC [@southafrica]. In institutions that have implemented more standardised approaches to case selection, factors that indicate case review include deaths, adverse events, and complications [@whoguidelines]. 
 
-TSS are already used in some clinics to identify cases for peer review [@whoguidelines]. However, the extent to which TSS are associated with or can predict opportunities for improvement (OFI) as found in M&M conferences is poorly understood. If it is found that an existing TSS model is associated with OFI, it could allow for another avenue of automatically identifying potentially mismanaged cases in a standardised fashion. 
-
-## Aims
-
-This study aims to evaluate how trauma severity models are associated with and to what extent they can predict opportunities for improvement.
+TSS are already used in some clinics to identify cases for peer review [@whoguidelines]. However, the extent to which TSS are associated with or can predict opportunities for improvement (OFI) as found in M&M conferences is poorly understood. If it is found that an existing TSS model is associated with OFI, it could allow for another avenue of automatically identifying potentially mismanaged cases in a standardised fashion. This study aims to evaluate how trauma severity models are associated with and to what extent they can predict opportunities for improvement.
 
 
 Methods 
@@ -56,7 +52,7 @@ Study design
 ------------
 
 <!-- Present key elements of study design -->
-This is a single-centre retrospective cohort study, using data from two registries at Karolinska University Hospital (KUH): the trauma registry database and the trauma care quality registry. The trauma care quality registry is a subset of the trauma registry and contains data on trauma patients who were selected for morbidity and mortality (M&M) reviews. These two databases will be linked and then analysis will be performed to estimate the association between the common trauma severity models (TSM) TRISS, NORMIT, and RISCII, and opportunities for improvement (OFI) using logistic regression. The predictive performance of these models will be evaluated using measures of discrimination and calibration. 
+This is a single-centre retrospective cohort study, using data from two registries at Karolinska University Hospital (KUH): the trauma registry database and the trauma care quality registry. The trauma care quality registry is a subset of the trauma registry and contains data on trauma patients who were selected for M&M reviews. These two databases will be linked and then analysis will be performed to estimate the association between the common trauma severity models (TSM) TRISS, NORMIT, and RISCII, and opportunities for improvement (OFI) using logistic regression. The predictive performance of these models will be evaluated using measures of discrimination and calibration. 
 
 Setting
 -------
@@ -66,17 +62,16 @@ periods of recruitment, exposure, follow-up, and data collection -->
 
 KUH is located in Stockholm, Sweden. KUH's trauma centre is equivalent to a level 1 trauma centre according to American College of Surgeons standards [@NKStrauma]. KUH is the primary trauma centre for the region of Stockholm. In addition, KUH has agreements with several other regions to provide trauma care for patients with severe trauma. KUH is thereby the major trauma centre for a population of almost 3 million people [@NKStrauma]. 
 
-The trauma registry at KUH contains data on 21,000 patients collected between 2012 and 2021. This registry is also submitted to SweTrau, Sweden's national trauma registry database, and therefore meets SweTrau guidelines. The registered data includes prehospital vital signs and management, vital signs and management on arrival at hospital, information about the type of injury, and the primary method of treatment. It also includes tracks follow-up. Follow-up variables include, but are not limited to, survival at 30 days, days in ventilator, GCS at discharge, highest level of care, and transfers to other units. 
+The trauma registry at KUH contains data on 21,000 patients collected between 2012 and 2021. This registry is also submitted to SweTrau, Sweden's national trauma registry database, and therefore meets SweTrau guidelines. The registered data includes prehospital vital signs and management, vital signs and management on arrival at hospital, information about the type of injury, and the primary method of treatment. Follow-up variables include, but are not limited to, survival at 30 days, days in ventilator, GCS at discharge, highest level of care, and transfers to other units. 
 
-The trauma care quality register is an internal hospital register and registers the outcome of M&M conferences. M&M conferences are multidisciplinary and their purpose is to review selected patient cases and determine whether an opportunity for improvement existed in each individual case. Examples of opportunities for improvement could be insufficient resources or errors in patient management. 
-
+The trauma care quality register is an internal hospital register and registers the outcome of M&M conferences. Each case reviewed is registered in the trauma care quality register with data about the outcome of the review.
 
 Participants
 ------------
 
 Participants include all patients registered in both the trauma registry and the trauma care quality registry at KUH. The trauma registry includes all patients for whom the trauma team was activated after receiving a potentially traumatic injury, regardless of NISS score, and all patients with a NISS score >15, regardless of whether the trauma team was activated. Also included are patients who were transferred to the hospital within 7 days of injury and have a NISS score >15. Patients where the only traumatic injury is a chronic subdural hematoma and patients for whom the trauma team was activated without an underlying traumatic injury are excluded from the register.
 
-<!-- Eligiblity criteria for the trauma registry were taken from the SWETRAU manual, check if it is exactly the same at? -->
+<!-- Eligiblity criteria for the trauma registry were taken from the SWETRAU manual, check if it is exactly the same at NKS? -->
 
 The trauma care quality registry contains patients from the trauma registry that were selected for M&M review. At KUH, all fatalities are automatically selected for M&M review. In addition to this, the electronic medical records of all trauma patients are evaluated by research nursing staff to identify cases that potentially received sub-optimal care. Cases that two research nurses have evaluated and found to have potential for sub-optimal care are also selected for M&M review.
 
@@ -106,7 +101,7 @@ Study size
 
 Since all eligible participants must exist in both the trauma and the trauma care quality register, and the trauma care quality registry is a subset of the trauma registry, the number of participants is limited to the number of cases registered in the trauma care quality database. The trauma care quality database includes around 2200 patients who were selected for review between 2014 and 2021.
 
-<!-- Update these numbers later when I have actual numbers -->
+<!-- Update these numbers later when I have real numbers -->
 
 Quantitative variables
 ----------------------
@@ -114,16 +109,17 @@ Quantitative variables
 <!-- Explain how quantitative variables were handled in the
 analyses. If applicable, describe which groupings were chosen and why
 -->
+The exposure variables are the values given by the studied trauma models. These variables are continuous. The outcome variable, OFI, is a binary variable. 
 
-<!-- Really not sure
+<!-- Really not sure exactly what to put here
 -->
 
 Statistical methods
 -------------------
 
-R, a programming language for statistical computing, will be used for compilation and analysis of data. Variables will be handled according to the SweTrau manual. 
+R, a programming language for statistical computing, will be used for compilation and analysis of data. Conversion and handling of variables will be carried out according to the SweTrau manual. Results will be presented with a confidence interval of 95%. A p-value of <0.05 will be considered significant. 
 
-
+<!-- Complete case study? -->
 <!-- 
 
 Should answer these questions, where applicable:
@@ -143,8 +139,6 @@ This project is a retrospective cohort study and the project has thereby had no 
 
 **Stockholm Research Ethics Review Board approval number 2021-02541 and 2021-03531.**
 
-
-
 <!-- 
 
 source("main.R")  "imports" the main script file of your project and run any code in it -->
@@ -153,11 +147,22 @@ source("main.R")  "imports" the main script file of your project and run any cod
 Development and time plan
 ==========
 
-All data required for this project were collected and available prior to the project beginning. Therefore, the data only need to be analysed. 
+<!--
+B) En skriftlig redogörelse på ca en A4-sida av projektets utveckling, plus tidsplan för
+resterande del av kursen (använd tidsplanmallen i Canvas). Ange så exakt som möjligt:
+• Vilken typ av data, kategorier, variabler etc du avser att samla in
+• Hur data planeras presenteras (t ex tabeller och hur de kan struktureras, diagramtyper,
+vävnadssnitt, intervjucitat etc)
+• Hur data planeras analyseras; vilka statistiska metoder för jämförelser mellan en eller
+flera grupper, andra matematiska metoder, kvalitativ analys etc
+-->
+
+This is a registry-based project and all data required were collected and available prior to the project beginning. The data consists of information about trauma patients at KUH and the outcomes of morbidity & mortality conferences on selected patient cases. The next step after submitting this progress report is to begin writing the code that will import and clean data. Once this is completed, the code for data analysis will be written. The analysis will consist of using logistic regression to see if trauma severity models can predict opportunities for improvement. Initially the code will be written using scrambled data in order to minimise researcher bias. Once the code for analysis is complete, it will be run on the real-life data to obtain the results for the study. I have written a detailed time plan, including dates for deadlines, that is available for my supervisors. We will be in contact on a regular basis to discuss progress. All of my code and text will be uploaded on a regular basis, which will allow for my supervisors to see my progress. 
 
 ```{r, echo=FALSE, out.width = "400px"}
 knitr::include_graphics("images/timeplan.png")
 ```
+
 
 
 References
