lots of text about m&m; other small fixes

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -7,7 +7,7 @@
   }
   
 
-@online{NKStrauma,
+@online{nksstats,
     author        = {{Karolinska University Hospital}},
     title         = {Karolinska University Hospital becomes Sweden’s first trauma centre},
     year          = {2020},
@@ -15,7 +15,7 @@
     urldate       = {2022-09-09},
   }
   
-@online{SCB,
+@online{scb,
   author          = {Statistics Sweden},
   title           = {Dödsorsaker efter ålder år 2019},
   year            = 2020,
@@ -38,7 +38,7 @@
   pmid            = {33069326},
   }
 
-@article{longterm,
+@article{longtermtrauma,
   title           = {Long-Term Follow-up of Patients Treated for Traumatic Injury Regarding Physical and Psychological Function and Health-Related Quality of Life},
   author          = {Wihlke, Gunilla and Str{\"o}mmer, Lovisa and Tro{\"e}ng, Thomas and Brattstr{\"o}m, Olof},
   year            = {2021},
@@ -105,7 +105,7 @@
   pmid          = {27384364},
   }
 
-@article{errors,
+@article{prevdeathsghorbani,
   author        = {Ghorbani, P. and Strömmer, L.},
   title         = {Analysis of preventable deaths and errors in trauma care in a Scandinavian trauma level-I centre},
   journal       = {Acta Anaesthesiologica Scandinavica},
@@ -167,10 +167,70 @@
 }
 
 
+@article{prevdeathsmontmany,
+  title         = {Preventable Deaths and Potentially Preventable Deaths. {{What}} Are Our Errors?},
+  author        = {Montmany, Sandra and Pallisera, Anna and Rebasa, Pere and Campos, Andrea and Colilles, Carme and Luna, Alexis and Navarro, Salvador},
+  year          = {2016},
+  month         = mar,
+  journal       = {Injury},
+  volume        = {47},
+  number        = {3},
+  pages         = {669--673},
+  issn          = {0020-1383},
+  doi           = {10.1016/j.injury.2015.11.028},
+  langid        = {english},
+  keywords      = {Errors,Joint Commission,Preventable deaths,Trauma patients},
+  }
+
+@article{prevdeathsteixeira,
+  title         = {Preventable or {{Potentially Preventable Mortality}} at a {{Mature Trauma Center}}},
+  author        = {Teixeira, Pedro G. R. and Inaba, Kenji and Hadjizacharia, Pantelis and Brown, Carlos and Salim, Ali and Rhee, Peter and Browder, Timothy and Noguchi, Thomas T. and Demetriades, Demetrios},
+  year          = {2007},
+  month         = dec,
+  journal       = {Journal of Trauma and Acute Care Surgery},
+  volume        = {63},
+  number        = {6},
+  pages         = {1338--1347},
+  issn          = {2163-0755},
+  doi           = {10.1097/TA.0b013e31815078ae},
+  langid        = {american},
+  }
+
+
+@article{tqipanglo,
+  title         = {Trauma {{Center Quality Improvement Programs}} in the {{United States}}, {{Canada}}, and {{Australasia}}},
+  author        = {Stelfox, Henry T. and Straus, Sharon E. and Nathens, Avery and Gruen, Russell L. and Hameed, Syed M. and Kirkpatrick, Andrew},
+  year          = {2012},
+  month         = jul,
+  journal       = {Annals of Surgery},
+  volume        = {256},
+  number        = {1},
+  pages         = {163--169},
+  issn          = {0003-4932},
+  doi           = {10.1097/SLA.0b013e318256c20b},
+  langid        = {american},
+  }
+
+@article{developqi,
+  title         = {Development and {{Evaluation}} of {{Evidence-Informed Quality Indicators}} for {{Adult Injury Care}}},
+  author        = {Santana, Maria J. and Stelfox, Henry T. and Panel, on behalf of the Trauma Quality Indicator Consensus},
+  year          = {2014},
+  month         = jan,
+  journal       = {Annals of Surgery},
+  volume        = {259},
+  number        = {1},
+  pages         = {186--192},
+  issn          = {0003-4932},
+  doi           = {10.1097/SLA.0b013e31828df98e},
+  langid        = {american},
+}
+
+
+
 @online{blank,
   author          = {},
   title           = {},
   year            = {},
   url             = {},
   urldate         = {},
-}
+  }
