--- a/studyprogressreport.Rmd
+++ b/studyprogressreport.Rmd
@@ -3,7 +3,6 @@ title: "Association between trauma severity models and opportunities for improve
 author: "Victoria Witthoff"
 output:
   pdf_document: default
-  html_document: default
 bibliography: bibliography.bib
 csl: vancouver.csl
 ---
@@ -14,35 +13,52 @@ knitr::opts_chunk$set(echo = TRUE)
 
 Abbreviations
 =============
+* ASA-PS - American Society of Anesthesiology Physical Status
 * KUH - Karolinska University Hospital
 * KUH TCQD - Karolinska University Hospital Trauma Care Quality Database
 * KUH TR - Karolinska University Hospital Trauma Registry
+* NORMIT - Norwegian Survival Prediction Model in Trauma
 * OFI - Opportunities for improvement
+* Ps - Probability of survival
+* TRISS - Trauma and Injury Severity Score
 
 Introduction
 ============
-<!--Mycket bra! Röd tråd och "tratt". -->
 <!-- Why trauma is a big deal --> 
 
-Traumatic injury is one of the leading causes of death worldwide, constituting nearly 8% of global deaths annually [@whoepi]. The global health burden of physical injury has led to trauma being described as a worldwide pandemic. One of the characteristics of this particular pandemic is its demographic spread; trauma is a leading cause of death for people aged 10-49 years [@globalburden] and 90% of trauma-related deaths occur in low- to middle-income countries [@whoepi]. Nonfatal outcomes also comprise a significant portion of the global health burden of disability [@globalburden], which can drastically reduce quality of life and lifespan in survivors of severe trauma. Outcomes in severe trauma are dependent on the quality of care received, and it has been shown in the US that trauma quality improvement programs improve outcomes [@ustqi].
+Traumatic injury is one of the leading causes of death worldwide, constituting nearly 8% of global deaths annually [@whoepi]. The global health burden of physical injury has led to trauma being described as a worldwide pandemic. One of the characteristics of this particular pandemic is its demographic spread; trauma is a leading cause of death for people aged 10-49 years [@globalburden] and 90% of trauma-related deaths occur in low- to middle-income countries [@whoepi]. Nonfatal outcomes also comprise a significant portion of the global health burden of disability [@globalburden], which can drastically reduce quality of life and health status in survivors of severe trauma [@globalburden; @longtermtrauma].
+
+Management of severe trauma is highly time-sensitive and is also dependent on the actions of a multidisciplinary chain of healthcare providers. Errors in management are a common cause of preventable deaths [@prevdeathsghorbani; @prevdeathsmontmany; @prevdeathsteixeira]. Outcomes in severe trauma are dependent on the quality of care received, and it has been shown in the US that trauma quality improvement (QI) programs improve outcomes [@ustqi]. However, it has been shown that the implementation of QI programs differs widely between clinics [@tqipanglo] and there is still plenty of progress to be made in improving these programs.  
+
+## Morbidity and mortality review 
+
+The gold standard of trauma quality improvement programs worldwide are multidisciplinary morbidity and mortality (M&M) conferences.  M&M conferences review selected patient cases and attempt to establish whether there were opportunities for improvement (OFI) in each specific case, and, where necessary, implement corrective actions. The incidence of OFI function in this manner as a proxy for incidence of suboptimal care. The WHO guidelines for trauma quality improvement programmes recommend regularly scheduled multidisciplinary conferences and give specific recommendations as to their structure and format [@whoguidelines]. Despite these  recommendations, there is a still a great degree of variation amongst clinics in how M&M conferences are carried out, with a significant number of clinics still using an informal and unstructured format [@tqpianglo]. The WHO note themselves in their guidelines that M&M conferences are not used to their fullest potential globally [@whoguidelines]. 
+
+The value of M&M conferences in long-term quality improvement is dependent on selection of appropriate cases for review. The process by which patient cases are selected for M&M review differs between clinics and case selection is often non-standardised [@mmreview; @tqipanglo]. This weakness of M&M review has been subject to considerable efforts to develop strategies to standardise case selection. The benefit of standardising case selection is twofold; it could increase identification of the cases that are most likely to have been mismanaged, and it could also save resources in the form of work hours. The latter benefit is not insignificant considering the large caseload found in most urban trauma centres. Some clinics have already made efforts to standardise case election; for example by using quality indicators, or audit filters, to flag cases for inclusion in M&M conferences [@tqipanglo]. Examples of quality indicators include time to first medical contact, adverse event rate, and mortality rate [@developqi]. The WHO recommends that all "deaths, complications, adverse events and errors" should be reviewed [@whoguidelines]. 
 
 <!-- Explain the what and why of TSM -->
 
-Trauma severity scores (TSS) are used in trauma quality improvement programs and research for their usefulness in benchmarking and in comparing trauma severity between patients [@whoguidelines]. The existence of these models is necessitated by the heterogeneous nature of trauma, due to the variety in its underlying causes, which affect both the type and severity of the injury. This heterogeneity poses challenges in comparing and evaluating trauma outcomes and has spurred the development of multiple TSS. TSS were initially intended for use in prehospital triage, and therefore were simplistic by design for ease of use [@traumareview], but over the years newer and more advanced models have been developed for quality assurance and research purposes. These models differ in their methodology but all have the aim of translating injury severity into quantitative values. 
+## Trauma severity scores
+Trauma severity scores (TSS) are used in trauma quality improvement programs and research for their usefulness in benchmarking and in comparing trauma severity between patients [@whoguidelines]. The existence of these models is necessitated by the heterogeneous nature of trauma, due to the variety in its underlying causes, which affect both the type and severity of the injury. This heterogeneity poses challenges in comparing and evaluating trauma outcomes and has spurred the development of multiple TSS. TSS were initially intended for use in prehospital triage, and therefore were simplistic by design for ease of use [@traumareview], but over the years newer and more advanced models have been developed for quality assurance and research purposes. Today there are hundreds of TSS models. These models differ in their methodology but all have the aim of translating injury severity into quantitative values. 
 
-The Trauma and Injury Severity Score (TRISS) is one of the most commonly used models. TRISS is a combination index that incorporates patient age, injury severity by anatomical site, and physiological parameters [@triss]. TRISS estimates the possibility of survival for the given parameters, and can be used by hospitals as a benchmark to compare outcomes against a standardised survival estimate. <!--Jag skulle nämna dina andra scores här -->
+One of the limitations of any TSS model is that their estimates may be unreliable when applied to a population different from the one the model was developed from. 
 
-<!-- Info on other scores here? -->
-<!-- Explain the what and why of M&M --> 
-<!-- -->
-Another cornerstone of trauma quality improvement programs worldwide are multidisciplinary morbidity and mortality conferences (MMC). Management of severe trauma is highly time-sensitive and is also dependent on the actions of a multidisciplinary chain of healthcare providers. Errors in management are a common cause of preventable deaths [@errors].  These conferences review selected patient cases and attempt to establish whether there were opportunities for improvement (OFI) in each specific case and to implement corrective actions. OFI function in this manner as a proxy for suboptimal care. The WHO guidelines for trauma quality improvement programmes include specific recommendations on holding regularly scheduled M&M conferences, but also note that M&M conferences are not used to their fullest potential globally [@whoguidelines]. <!--Kolla exv Strömmers och Ghorbanis pek,https://pubmed-ncbi-nlm-nih-gov.sll.idm.oclc.org/29797712/ .
-De försöker använda bl.aa normit och triss för att se korrelans till OFI och preventable deaths. Skillnaden mot det du gör är att de bara tittar på patienter som dör och inte hela cohorten. Du tittar också på ett betydligt större dataunderlag. Så ditt bygger vidare på deras arbete-->
+The Trauma and Injury Severity Score (TRISS), first developed in 1987 [@triss] and most recently updated in 2010 <!-- Cite 2009 revision ref -->, is one of the most commonly used models worldwide.TRISS is a combination index that incorporates patient age, injury severity by anatomical site, and physiological parameters [@triss]. The resulting value is a percentage that estimates the probability of survival (Ps). 
+
+
+
+<!-- Triss Limitations -->
+
+<!-- NORMIT -->
+
+
 
 <!-- Explain why TSM ⇒ M&M -->
 
-One limitation of M&M conferences is that their value in long-term quality improvement is dependent on selection of appropriate cases for review. The process by which patient cases are selected for M&M review differs between clinics and one systematic review found that case selection is often non-standardised [@mmreview]. There is an inherent weakness in relying on healthcare providers to self-report on cases they were involved in. One study in South Africa found that using electronic medical records to automatically generate reports led to a dramatic increase in reporting of morbidity and mortality over a system of self-reporting for MMC [@southafrica]. In institutions that have implemented more standardised approaches to case selection, factors that indicate case review include deaths, adverse events, and complications [@whoguidelines]. 
+ <!--Kolla exv Strömmers och Ghorbanis pek,https://pubmed-ncbi-nlm-nih-gov.sll.idm.oclc.org/29797712/ .
+De försöker använda bl.aa normit och triss för att se korrelans till OFI och preventable deaths. Skillnaden mot det du gör är att de bara tittar på patienter som dör och inte hela cohorten. Du tittar också på ett betydligt större dataunderlag. Så ditt bygger vidare på deras arbete-->
 
-TSS are already used in some clinics to identify cases for peer review [@whoguidelines]. However, the extent to which TSS are associated with or can predict opportunities for improvement (OFI) as found in M&M conferences is poorly understood. If it is found that an existing TSS model is associated with OFI, it could allow for another avenue of automatically identifying potentially mismanaged cases in a standardised fashion. This study aims to evaluate how trauma severity models are associated with and to what extent they can predict opportunities for improvement.
+ However, the extent to which TSS are associated with or can predict OFI as found in M&M conferences is poorly understood. If it is found that an existing TSS model is associated with OFI, it could allow for another avenue of automatically identifying potentially mismanaged cases in a standardised fashion. This study aims to evaluate how trauma severity models are associated with and to what extent they can predict opportunities for improvement.
 <!--Introduktionen är mycket bra! Egentligen bara fortsätta som du gör, läs på och lägg till meningar/källor när du hittar info. För att nå KI:s sidkrav kan du skriva en hel del om de olika Scorsen -->
 
 Methods 
@@ -52,7 +68,7 @@ Study design
 ------------
 
 <!-- Present key elements of study design -->
-This is a single-centre retrospective cohort study, using data from two registries at Karolinska University Hospital (KUH): the trauma registry database and the trauma care quality registry. The trauma care quality registry is a subset of the trauma registry and contains data on trauma patients who were selected for M&M reviews. These two databases will be linked and then analysis will be performed to estimate the association between the common trauma severity models (TSM) TRISS, NORMIT, and RISCII, and opportunities for improvement (OFI) using logistic regression. The predictive performance of these models will be evaluated using measures of discrimination and calibration. 
+This is a single-centre retrospective cohort study, using data from two registries at Karolinska University Hospital (KUH): the trauma registry and the trauma care quality database (TCQD). The TCQD is a subset of the trauma registry and contains data on trauma patients who were selected for M&M reviews. These two databases will be linked and then analysis will be performed to estimate the association between the common TSS models TRISS and NORMIT <!-- And something else? --> and OFI using logistic regression. The predictive performance of these models will be evaluated using measures of discrimination and calibration. 
 
 Setting
 -------
@@ -60,22 +76,24 @@ Setting
 <!-- Describe the setting, locations, and relevant dates, including
 periods of recruitment, exposure, follow-up, and data collection -->
 
-KUH is located in Stockholm, Sweden. KUH's trauma centre is equivalent to a level 1 trauma centre according to American College of Surgeons standards [@NKStrauma]. KUH is the primary trauma centre for the region of Stockholm. In addition, KUH has agreements with several other regions to provide trauma care for patients with severe trauma. KUH is thereby the major trauma centre for a population of almost 3 million people [@NKStrauma]. 
+KUH is located in Stockholm, Sweden. KUH's trauma centre is equivalent to a level 1 trauma centre according to American College of Surgeons standards [@nksstats]. KUH is the primary trauma centre for the region of Stockholm. In addition, KUH has agreements with several other regions to provide trauma care for patients with severe trauma. KUH is thereby the major trauma centre for a population of almost 3 million people [@nksstats]. 
 
-The trauma registry at KUH contains data on 21,000 patients collected between 2012 and 2021.<!--Det kanske är så många? Var hittade du den siffran? --> This registry is also submitted to SweTrau, Sweden's national trauma registry database, and therefore meets SweTrau guidelines. The registered data includes prehospital vital signs and management, vital signs and management on arrival at hospital, information about the type of injury, and the primary method of treatment. Follow-up variables include, but are not limited to, survival at 30 days, days in ventilator, GCS at discharge, highest level of care, and transfers to other units. <!--Jag skulle nämna att trauma registret följer "the utstein template" vilket är en internationell konsensus kring hur register byggs, inkl trauma register i detta fall -->
+The trauma registry at KUH is also submitted to SweTrau, Sweden's national trauma registry database, and therefore meets SweTrau guidelines. SweTrau follows the Utstein Trauma Template for reporting of data following major trauma. The registered data includes prehospital vital signs and management, vital signs and management on arrival at hospital, information about the type of injury, and the primary method of treatment. Follow-up variables include, but are not limited to, survival at 30 days, days in ventilator, GCS at discharge, highest level of care, and transfers to other units.
 
 The trauma care quality register is an internal hospital register and registers the outcome of M&M conferences. Each case reviewed is registered in the trauma care quality register with data about the outcome of the review.
 
 Participants
 ------------
 
-Participants include all patients registered in both the trauma registry and the trauma care quality registry at KUH. <!--När du kommit igång med analysen så ska faktiskt nummer in här --> The trauma registry includes all patients for whom the trauma team was activated after receiving a potentially traumatic injury, regardless of NISS score, and all patients with a NISS score >15, regardless of whether the trauma team was activated. Also included are patients who were transferred to the hospital within 7 days of injury and have a NISS score >15. Patients where the only traumatic injury is a chronic subdural hematoma and patients for whom the trauma team was activated without an underlying traumatic injury are excluded from the register.
+Participants include all patients registered in both the trauma registry and the TCQD at KUH. <!--När du kommit igång med analysen så ska faktiskt nummer in här (yes ska göra det) --> 
 
-<!-- Eligiblity criteria for the trauma registry were taken from the SWETRAU manual, check if it is exactly the same at NKS? -->
-<!--Det stämmer! -->
+### Selection for the trauma registry
 
-The trauma care quality registry contains patients from the trauma registry that were selected for M&M review. At KUH, all fatalities are automatically selected for M&M review. In addition to this, the electronic medical records of all trauma patients are evaluated by research nursing staff to identify cases that potentially received sub-optimal care. Cases that two research nurses have evaluated and found to have potential for sub-optimal care are also selected for M&M review.
-<!--Helt korrekt, de använder även "audit filter" i sin screening, ev behöver du nämna detta också, se tid studenters arb. -->
+The trauma registry includes all patients for whom the trauma team was activated after receiving a potentially traumatic injury, regardless of NISS score, and all patients with a NISS score >15, regardless of whether the trauma team was activated. Also included are patients who were transferred to the hospital within 7 days of injury and have a NISS score >15. Patients where the only traumatic injury is a chronic subdural hematoma and patients for whom the trauma team was activated without an underlying traumatic injury are excluded from the register.
+
+### Selection for the TCQD
+
+The TCQD contains patients from the trauma registry that were selected for M&M review. At KUH, all fatalities are automatically selected for M&M review. In addition to this, the electronic medical records of all trauma patients are screened by research nursing staff to identify cases that potentially received sub-optimal care. These nurses also use audit filters that automatically highlight cases with abnormal parameters. Cases that two research nurses have evaluated and found to have potential for sub-optimal care are also selected for M&M review.
 
 
 Variables
@@ -86,8 +104,22 @@ confounders, and effect modifiers. Give diagnostic criteria, if
 applicable. For each variable of interest, give sources of data and
 details of methods of assessment (measurement). Describe comparability
 of assessment methods if there is more than one group -->
+### Outcome
+The studied outcome is the binary variable "opportunities for improvement" (OFI), as identified by the multidisciplinary M&M conference at KUH. OFI is coded as either "Yes - at least one opportunity for improvement" or "No - no opportunities for improvement". 
 
-The studied outcome is the binary variable "opportunities for improvement" (OFI), as identified by the  multidisciplinary review board after a mortality and morbidity review. OFI is coded as either "Yes - at least one opportunity for improvement" or "No - no opportunities for improvement". The primary exposures of interest are trauma severity scores according to the TRISS, NORMIT, and RISCII models. 
+### Exposures
+The primary exposures of interest are trauma severity scores according to the TRISS and NORMIT models. Both of these models estimate the Ps based on expected mortality within 30 days. This is expressed a percentage and is a continuous variable. The variables integrated into these models are taken from arrival at hospital. 
+
+#### TRISS
+
+The TRISS model incorporates patient age, Injury Severity Score (ISS), Revised Trauma Score (RTS), and whether the trauma was blunt or penetrating. 
+
+The ISS is given by estimating the severity of physical injuries by anatomical region. Severity is assessed on a seven-point scale from "No injury" to "Unsurvivable injury". The value given is points on a scale from 0 to 75. The RTS is based on physiological parameters GCS, systolic blood pressure, and respiratory rate. Values are taken from arrival at hospital. These parameters are weighted and expressed in a score from 0 to 8, where a lower score indicates more severe injury. 
+
+
+#### NORMIT
+
+The NORMIT model incorporates the patient's age, New Injury Severity Score (NISS), comorbities prior to traumatic injury based on the ASA physical status classification system (ASA-PS), and their RTS. The NISS differs from the ISS in that the NISS is the sum of the squares from only the three most injured anatomical regions. 
 
 Bias 
 ----
@@ -111,7 +143,10 @@ Quantitative variables
 <!-- Explain how quantitative variables were handled in the
 analyses. If applicable, describe which groupings were chosen and why
 -->
-The exposure variables are the values given by the studied trauma models. These variables are continuous. The outcome variable, OFI, is a binary variable. 
+
+### Exposures
+
+
 <!--Om du inte tydligt definerat modellernas variabler behöver du göra det här, alltså för exv triss som är GCS, RR, BT + ISS osv osv-->
 <!-- Really not sure exactly what to put here
 -->
