more text about trauma severity models

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -223,7 +223,26 @@
   issn          = {0003-4932},
   doi           = {10.1097/SLA.0b013e31828df98e},
   langid        = {american},
+  }
+
+
+@article{triss2010,
+  title = {Trauma and {{Injury Severity Score}} ({{TRISS}}) Coefficients 2009 Revision},
+  author = {Schluter, Philip J. and Nathens, Avery and Neal, Melanie L. and Goble, Sandra and Cameron, Cate M. and Davey, Tamzyn M. and McClure, Roderick J.},
+  year = {2010},
+  month = apr,
+  journal = {The Journal of Trauma},
+  volume = {68},
+  number = {4},
+  pages = {761--770},
+  issn = {1529-8809},
+  doi = {10.1097/TA.0b013e3181d3223b},
+  langid = {english},
+  pmid = {20386271},
+  keywords = {Adolescent,Adult,Aged,Chi-Square Distribution,Humans,Injury Severity Score,Logistic Models,Markov Chains,Middle Aged,Predictive Value of Tests,ROC Curve,Trauma Severity Indices,United States,Wounds and Injuries},
 }
+
+
 
 
 
